index.css
/* ... */
/* Modal Content */
.modal_content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.modal_header h4 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
}

.modal_header button {
  border: 1px solid #979493;
  font-family: 'Poppins', serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  color: #3c3a39;
}

.modal_body p {
  font-family: 'Inter', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 30px;
  color: #344563;
}

.modal_body button {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 12px;
  gap: 12px;

  /* position: absolute; */

  /* width: 134px;
  height: 48px;
  left: 708px; */
  top: calc(50% - 48px / 2 + 264.5px);
  background: #f55800;
  border: none;
  color: white;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.hover_action :hover + .action {
  visibility: visible;
}

.hover_action :hover p {
  visibility: hidden;
}

.hover_action :hover h3 {
  visibility: hidden;
}

.hover_action :hover ul {
  visibility: hidden;

  /* display: none; */
}

.hover_action :hover {
  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0) 61.94%), url('img/works/workPlaceholderHover.png');
}

@media screen and (max-width: 1000px) {
  .intro_item3 {
    margin: auto 0 12% 5%;
  }

  .about_item2 {
    margin: auto 0 0 5%;
  }
}

@media screen and (max-width: 700px) {
  .work_head {
    margin-bottom: 80px;
  }

  .recent_works_img {
    text-align: center;
  }

  .form {
    flex-direction: column;
    align-items: flex-start;
    width: 90%;
    margin: 120px 5% 0 5%;

    /* no unit */
  }

  .form_field_item4 {
    align-self: center;
    justify-content: center;
  }

  .action {
    display: flex;
  }

  .form_item {
    align-self: center;
  }

  .form_item1 {
    width: 100%;
  }

  .form_item1 p {
    text-align: center;
  }
}

@media screen and (max-width: 500px) {
  .menu {
    display: none;
  }

  .menu_bar {
    display: block !important;
    width: 24px;
    height: 24px;
    flex: none;
    order: 0;
    flex-grow: 0;
    justify-content: center;
  }

  .menu_bar a {
    text-decoration: none;
  }

  .menu_bar #close_btn {
    display: none;
  }

  .mobile_header .flex_one {
    display: none;
    align-self: flex-start;
  }

  .hide {
    display: none !important;
  }

  .show {
    display: block !important;
  }

  .mobile_header {
    flex-direction: column;
    height: 100%;
    padding-top: 10%;
    gap: 15%;
    justify-content: flex-start;
  }

  .mobile_header .menu_bar {
    align-self: flex-end;
    padding-right: 24px;
  }

  /* .mobile_header .flex_one {
    align-self: flex-start;
  } */

  .mobile_header .flex_two {
    padding-right: 0;
    display: flex;
    justify-content: space-between;
    width: 100%;
    flex-direction: column;
  }

  .mobile_header li {
    margin-right: 10%;
    margin-bottom: 5%;
    font-family: 'Inter', serif;
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    border-bottom: 1px solid #6f6c6b;
  }

  .mobile_menu {
    display: block;
  }

  .mobile_menu ul {
    display: flex;
    list-style-type: none;
    justify-content: space-between;
    flex-direction: column;
  }

  .mobile_menu a {
    color: white;
    text-decoration: none;
    transition: font-weight 200ms;
  }

  .mobile_menu a:hover {
    color: #ff6b00;
    font-weight: bold;
  }

  .mobile_menu li {
    margin-right: 10%;
  }

  .name {
    font-family: "Roboto", serif;
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
    display: flex;
    align-items: center;
    text-align: center;
    color: #fff;
    flex: none;
    order: 0;
    flex-grow: 0;
    padding-left: 24px;
    text-decoration: none;
  }

  .menu_bar img {
    width: 18px;
    height: 12px;
    left: 3px;
    top: 6px;
    align-self: center;
  }

  .intro {
    flex-direction: column;
  }

  .recent_works_img {
    display: flex;
    justify-content: center;
    width: 100%;
  }

  .multi_post {
    width: 100%;
  }

  .recent_works {
    flex-direction: column;
    margin-bottom: 120;
  }

  .intro_item1 {
    order: 0;
  }

  .intro_item2 {
    order: 1;
  }

  .social_media_head {
    flex-direction: row;
  }

  .main_container {
    padding-bottom: 120px;
  }

  .work_head {
    flex-direction: column;
  }

  .about_container {
    flex-direction: column;
  }

  /** Skills */
  .skills {
    flex-direction: column;
    align-items: center;
  }

  .skill_item {
    align-items: center;
  }

  .skill_item li {
    align-self: center;
  }
}

